# cpp-h264-realtime-encoding

./: .clang-format  CMakeLists.txt  Camera.ixx  Encoder.ixx  VideoFrame.ixx  main.cpp  vcpkg.json
App/: CMakeLists.txt
App/src/: main.cpp
Modules/: CMakeLists.txt
Modules/include/Modules/: Camera.hpp
Modules/src/: Camera.cpp
Video/: CMakeLists.txt
Video/include/Video/: Frame.hpp
Video/src/: Frame.cpp
